14-06-14:
* Updated to the latest git version 4b0ceb
* Patched libxcb (courtesy of VcXsrv), allowing libX11 to be upgraded to
  the latest git version. Probably fixes a few GUI bugs.
    - Updated all X libraries to the latest git version
* Fixed resource loading (the background is now white)
* Fixed scrolling in menus with the scroll wheel
* Fixed the display of tooltips
31-05-13:
* Updated to latest git version 416fb4 + snapping fix
* TTC handling has been fixed
* Some crashes in the Print dialogue have been fixed
* The cursor used for scroll zooming has been fixed
* Point snapping in the glyph editor has been fixed
18-02-14:
* 32-bit: Updated to the latest git version 493c5d
* 32-bit: Updated Python 2.7 libraries
* 32-bit: Now includes a copy of OpenSSL 1.0.1g for Python's hashlib
17-02-14:
* Updated to the latest git version 493c5d
* 64-bit: First 64-bit build! May be unstable!
* 64-bit: Switched to Python 3.4. Removed Python2.
07-02-14:
* Updated to the latest git version cae2da3
17-01-14:
* Fixed folder browser 'up' button when on the default folder
* Set preferences to %APPDATA\FontForge for the installed
  version, otherwise share\fontforge\preferences for the
  portable version.
* Made an installer version using InnoSetup